fixed overflow in media queries, added Bootstrap and dropdown menu, cleaned up responsive design

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,16 @@
+/* DECLARING VARIABLES */
 :root {
     --border: 2px solid black;
+    --font: 'Kanit', sans-serif;
 }
 
-* {
+/* ELEMENT SELECTORS */
+html, body {
     max-width: 100vw;
 }
+
 h1 {
-    font-family: 'Kanit', sans-serif;
+    font-family: var(--font);
     font-size: 300%;
 }
 
@@ -15,8 +19,8 @@ header {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    max-width: 100vw;
     height: 55px;
-    width: 100%;
     border-bottom: var(--border);
 }
 
@@ -31,6 +35,7 @@ form {
     flex-direction: column;
     align-items: center;
     margin: 15px 10px 0 10px;
+    padding: 20px 0;
     border: var(--border);
 }
 
@@ -39,19 +44,47 @@ td {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 100vw;
     margin: 20px 10px 0 10px;
     border: var(--border);
 }
 
 td {
-    border: none;
     margin-bottom: 20px;
+    border: none;
 }
 
+/* CLASS SELECTORS */
 .filler-img-container {
     display: none;
 }
 
+.about-info-wrapper {
+    margin: 20px;
+}
+
+.form-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    border: none;
+}
+
+.zipcode-input,
+.schedule-button {
+    border: var(--border);
+    width: 100%;
+    height: 30px;
+}
+
+.schedule-button {
+    margin-top: 10px;
+}
+
+/* BUTTON HOVERS */
+
+/* MEDIA QUERIES FOR DESKTOP */
 @media all and (min-width: 862px) {
     header {
         justify-content: start;
